[package]
name = "mibparsers"
version = "0.1.0"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }
